@@ -44,7 +44,7 @@
 {%- for key, entries in genindexentries %}
 <h2 id="{{ key }}">{{ key }}</h2>
 <table style="width: 100%" class="indextable genindextable"><tr>
-  {%- for column in entries|slice(2) if column %}
+  {%- for column in entries|slice_index(2) if column %}
   <td style="width: 33%" valign="top"><dl>
     {%- for entryname, (links, subitems, _) in column %}
       {{ indexentries(entryname, links) }}
